2006-02-20  Hans Rakers <hans at parse dot nl>

	* Fixed static_members handling for php-5.0. Broke this while
	  working on PHP-5.1 support. Lost in ifdef statements ;)

2006-02-19  Hans Rakers <hans at parse dot nl>

	* Restored PHP4 compatibility
	* Fixed inheritance/prototype issue with abstract methods and classes during
	  restore. zend_do_inheritance handles these properly now.

2006-02-18  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Bumped up version to 0.9.5-dev

2006-02-17  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Merged PHP_5_1 branch with HEAD

2006-02-17  Hans Rakers <hans at parse dot nl>

        * PHP_5_1: Some final fixes before merging to HEAD:
          - Fixed bug #1410723 (handling of class constants by the optimizer)
          - Fixed backwards compatibility with PHP < 5.1
          This revision works pretty well in my testing environment, PHP-5.1 support
          seems to be coming along quite well. Please test with your applications/
          in your environment and report back with your experiences or possible problems!

2006-02-15 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Released version 0.9.4

2006-02-15  Hans Rakers <hans at parse dot nl>

        * PHP_5_1: Fixes for five failing tests found using the test suite created by Bart
          Tests that failed where:
          -ctor_dtor_inheritance (failed because __construct, __destruct and __clone were not properly set)
          -destructor_and_exceptions (failed because inheritance of parent methods was broken, fixed by making sure ea_store doesn't store methods outside scope)
          -inheritance_002 (failed because __construct, __destruct and __clone were not properly set)
          -private_members (failed because __construct, __destruct and __clone were not properly set)
          -type_hinting_003 (failed because array_type_hint introduced in zend_arg_info in PHP-5.1 was ignored)
